samples/_failures_safe/1761787040_fd0c44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_512988e3.c: In function ‘main’:
./samples/SAFE/__tmp_512988e3.c:145:16: error: missing terminating " character
  145 |         printf("No valid log
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_512988e3.c:145:9: error: expected expression at end of input
  145 |         printf("No valid log
      |         ^~~~~~
./samples/SAFE/__tmp_512988e3.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_512988e3.c:145:9: error: expected declaration or statement at end of input
